<resources>
    <string name="app_name" translatable="false">Chatroom</string>

    <string name="title_messages_activity">Messages</string>
    <string name="title_email_activity">Change email</string>
    <string name="title_username_activity">Change username</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_login_activity">Login</string>
    <string name="title_register_activity">Registration</string>

    <string name="empty_username">None</string>

    <string name="enter_username">Please enter username</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>

    <string name="short_username">Username it too short</string>
    <string name="short_password">Password is too short</string>

    <string name="not_match_passwords">Passwords must match</string>

    <string name="login">Login…</string>
    <string name="login_failed">Login failed!</string>

    <string name="registration">Registration…</string>
    <string name="registered">Registered</string>
    <string name="registration_failed">Registration failed!</string>

    <string name="ok">OK</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="email_sent">Email </string>

    <string name="reset_password">Cannot log in? We will send reset instructions to the email address associated with your account.</string>
    <string name="error_reset_password">User with this email address not found.</string>
    <string name="success_reset_password">Check your email for a link to reset your password.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">WELCOME</string>
    <string name="log_in">log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forget_password">Forget password</string>
    <string name="send">Send</string>
    <string name="type_message">Type a message</string>
    <string name="info">Info</string>
    <string name="language">Language</string>
    <string name="choose_the_language_to_display">Choose the language to display in the application</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="change_language">Change language</string>
    <string name="log_out">Log out</string>
    <string name="general">General</string>
    <string name="change_password">Change Password</string>
    <string name="privacy">Privacy</string>
    <string name="username">Username</string>
    <string name="settings_email">email</string>
    <string name="settings_username">username</string>
    <string name="change__username">You can change your current username. Fill the form below.</string>
    <string name="save">Save</string>
    <string name="change__email">change_email</string>
    <string name="saved">Saved</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log_out">Log Out</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="message_delete">Are you sure you want to delete this message?</string>
    <string name="cancel">Cancel</string>
    <string name="check_username">Check you username</string>

</resources>
